# LQCD

./: .gitignore  LICENSE  README.md
exercise-01/: README.md  solution-01.ipynb
exercise-01/code/: CMakeLists.txt  make.txt  mc_ising.cpp  mc_ising.hpp
exercise-01/code/lattice/: 2d.hpp
exercise-01/code/results/: L16.txt  L24.txt  L32.txt  L8.txt  run.sh
exercise-01/code/test/: main.cpp
exercise-02/: solution-02.ipynb
exercise-02/code/: CMakeLists.txt  mc_anharmonic_oscillator.cpp  mc_anharmonic_oscillator.hpp
exercise-02/code/lattice/: 1d.hpp
exercise-02/code/results/: h_mu-1_corr  h_mu-2_corr  h_mu-3  h_mu-3_corr  h_mu-5  h_mu-8  h_mu0  h_mu1_lamda0  h_mu3  h_mu6  tmp
exercise-02/code/test/: main.cpp
exercise-04/: solution-04.ipynb
exercise-04/code/: CMakeLists.txt  mc_phi4.cpp  mc_phi4.hpp  stats.hpp
exercise-04/code/lattice/: 4d.hpp
exercise-04/code/results/: L4_lambda0.01.txt  L4_lambda10.txt  L4_lambda100.txt  L4_lambda5.txt  L6_lambda0.01.txt  L6_lambda10.txt  L6_lambda100.txt  L6_lambda5.txt  L8_lambda0.01.txt  L8_lambda0.02.txt  L8_lambda10.txt  L8_lambda100.txt  L8_lambda5.txt
exercise-04/code/test/: main.cpp
exercise-05/: python-code.ipynb  solution-05.ipynb
exercise-05/code/: CMakeLists.txt  mc_ising.cpp  mc_ising.hpp
exercise-05/code/lattice/: 4d.hpp
exercise-05/code/results/: cL10.txt  cL12.txt  cL4.txt  cL6.txt  cL8.txt  run.sh
exercise-06/: solution-06.ipynb
exercise-06/code/: CMakeLists.txt  mc_U1.cpp  mc_U1.hpp
exercise-06/code/results/: L10.txt  L4.txt  L6.txt  L8.txt  run.sh
exercise-07/: solution-07.ipynb
exercise-07/code/: mc_ising.cpp
exercise-07/code/lattice/: 2d.hpp
exercise-07/code/results/: cL10.txt  cL15.txt  cL20.txt  cL25.txt  cL30.txt  cL40.txt  cL5.txt  jacknife.txt  mL10.txt  mL15.txt  mL20.txt  mL25.txt  mL30.txt  mL40.txt  mL5.txt  run_cluster.sh  run_metropolis.sh  tau_run2.txt  tau_run3.txt  tau_run4.txt  (+2 more)
exercise-09/: solution-09.ipynb
exercise-09/code/: CMakeLists.txt  mc_SU2.cpp  mc_SU2.hpp
exercise-09/code/lattice/: 4d.hpp
exercise-09/code/results/: L6_b3.2_HB1_OR0.txt  thermL8_b2.3_1HB_0OR_coldstart.txt  thermL8_b2.3_1HB_0OR_hotstart.txt  thermL8_b2.3_1HB_1OR_coldstart.txt  thermL8_b2.3_1HB_1OR_hotstart.txt
exercise-10/: solution-10.ipynb
exercise-10/code/: mc_SU2.hpp  stats.hpp
exercise-11/: solution-11.ipynb
exercise-11/code/: CMakeLists.txt  mc_ising.cpp  mc_ising.hpp  stats.hpp
exercise-12/: solution-12.ipynb
exercise-12/code/: CMakeLists.txt  mc_SU2.cpp  su2.hpp
exercise-12/code/results/: T4_L12_beta2.28.txt  T4_L12_beta2.295.txt  T4_L12_beta2.32.txt  T4_L12_beta2.34.txt  T4_L12_beta4.00.txt  T4_L16_beta2.295.txt  T4_L20_beta2.295.txt  T4_L4_beta1.00.txt  T4_L4_beta2.00.txt  T4_L4_beta2.28.txt  T4_L4_beta2.40.txt  T4_L4_beta2.60.txt  T4_L8_beta1.00.txt  T4_L8_beta2.00.txt  T4_L8_beta2.26.txt  T4_L8_beta2.28.txt  T4_L8_beta2.295.txt  T4_L8_beta2.32.txt  T4_L8_beta2.34.txt  T4_L8_beta3.00.txt  T4_L8_beta4.00.txt  polyakov.sh
(+26 files in other folders)
